Quick fix for adventure description wrapping

--- a/hexland-web/src/App.css
+++ b/hexland-web/src/App.css
@@ -154,7 +154,7 @@
   z-index: 4;
 }
 
-.card-body-spaced {
+.card-header-spaced {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
